--- a/src/components/DashboardStaticSidebar.astro
+++ b/src/components/DashboardStaticSidebar.astro
@@ -1,27 +1,36 @@
 ---
 const { navigation, teams } = Astro.props
+const path = Astro.url.pathname
 import { cn } from '@/lib/utils'
-import LogoIcon from './icons/LogoIcon.astro'
+import { Icons } from './Icons'
+import type { NavigationItem, Team } from '@/types'
 ---
 
 <div class='hidden lg:fixed lg:inset-y-0 lg:z-50 lg:flex lg:w-72 lg:flex-col'>
   <div class='flex grow flex-col gap-y-5 overflow-y-auto border-r border bg-background px-6 pb-4'>
     <div class='flex h-16 shrink-0 items-center'>
-      <LogoIcon styles='h-8 w-auto' />
+      <Icons.Logo className='h-8 w-auto' />
     </div>
     <nav class='flex flex-1 flex-col'>
       <ul role='list' class='flex flex-1 flex-col gap-y-7'>
         <li>
           <ul role='list' class='-mx-2 space-y-1'>
             {
-              navigation.map((item) => (
+              navigation.map((item: NavigationItem) => (
                 <li>
                   <a
                     href={item.href}
                     class={cn(
-                      item.current ? 'bg-secondary' : 'hover:bg-secondary',
+                      path === item.href ? 'bg-secondary' : 'hover:bg-secondary',
                       'group flex gap-x-3 rounded-md p-2 text-sm leading-6'
                     )}>
+                    <item.icon
+                      className={cn(
+                        path === item.href ? 'text-primary' : 'text-muted-secondary group-hover:text-primary',
+                        'w-6 h-6'
+                      )}
+                      aria-hidden='true'
+                    />
                     {item.name}
                   </a>
                 </li>
@@ -30,21 +39,21 @@ import LogoIcon from './icons/LogoIcon.astro'
           </ul>
         </li>
         <li>
-          <div class='text-xs font-semibold leading-6 text-gray-400'>Your teams</div>
+          <div class='text-xs font-semibold leading-6 text-muted-foreground'>Your teams</div>
           <ul role='list' class='-mx-2 mt-2 space-y-1'>
             {
-              teams.map((team) => (
+              teams.map((team: Team) => (
                 <li>
                   <a
                     href={team.href}
                     class={cn(
-                      team.current ? 'bg-secondary' : 'hover:bg-secondary',
+                      path === team.href ? 'bg-secondary' : 'hover:bg-secondary',
                       'group flex gap-x-3 rounded-md p-2 text-sm leading-6'
                     )}>
                     <span
                       class={cn(
-                        team.current
-                          ? 'bg-gray-50 text-primary'
+                        path === team.href
+                          ? 'bg-secondary text-primary'
                           : 'text-muted-foreground border-border group-hover:border-primary',
                         'flex h-6 w-6 shrink-0 items-center justify-center rounded-lg border text-[0.625rem] font-medium'
                       )}>
@@ -62,23 +71,7 @@ import LogoIcon from './icons/LogoIcon.astro'
             href='#'
             class='group -mx-2 flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 hover:bg-secondary'
           >
-            <svg
-              xmlns='http://www.w3.org/2000/svg'
-              fill='none'
-              viewBox='0 0 24 24'
-              stroke-width='1.5'
-              stroke='currentColor'
-              class='h-6 w-6 shrink-0 text-muted-foreground group-hover:text-primary'
-              aria-hidden='true'
-            >
-              <path
-                stroke-linecap='round'
-                stroke-linejoin='round'
-                d='M9.594 3.94c.09-.542.56-.94 1.11-.94h2.593c.55 0 1.02.398 1.11.94l.213 1.281c.063.374.313.686.645.87.074.04.147.083.22.127.324.196.72.257 1.075.124l1.217-.456a1.125 1.125 0 011.37.49l1.296 2.247a1.125 1.125 0 01-.26 1.431l-1.003.827c-.293.24-.438.613-.431.992a6.759 6.759 0 010 .255c-.007.378.138.75.43.99l1.005.828c.424.35.534.954.26 1.43l-1.298 2.247a1.125 1.125 0 01-1.369.491l-1.217-.456c-.355-.133-.75-.072-1.076.124a6.57 6.57 0 01-.22.128c-.331.183-.581.495-.644.869l-.213 1.28c-.09.543-.56.941-1.11.941h-2.594c-.55 0-1.02-.398-1.11-.94l-.213-1.281c-.062-.374-.312-.686-.644-.87a6.52 6.52 0 01-.22-.127c-.325-.196-.72-.257-1.076-.124l-1.217.456a1.125 1.125 0 01-1.369-.49l-1.297-2.247a1.125 1.125 0 01.26-1.431l1.004-.827c.292-.24.437-.613.43-.992a6.932 6.932 0 010-.255c.007-.378-.138-.75-.43-.99l-1.004-.828a1.125 1.125 0 01-.26-1.43l1.297-2.247a1.125 1.125 0 011.37-.491l1.216.456c.356.133.751.072 1.076-.124.072-.044.146-.087.22-.128.332-.183.582-.495.644-.869l.214-1.281z'
-              ></path>
-              <path stroke-linecap='round' stroke-linejoin='round' d='M15 12a3 3 0 11-6 0 3 3 0 016 0z'></path>
-            </svg>
-
+            <Icons.Settings className='h-6 w-6 shrink-0 text-muted-foreground group-hover:text-primary' />
              Settings
           </a>
         </li>
@@ -86,3 +79,4 @@ import LogoIcon from './icons/LogoIcon.astro'
     </nav>
   </div>
 </div>
+ ./Icons
