readme, general clean up

--- a/src/components/DashboardStaticSidebar.astro
+++ b/src/components/DashboardStaticSidebar.astro
@@ -68,7 +68,7 @@ import type { NavigationItem, Team } from '@/types'
         </li>
         <li class='mt-auto'>
           <a
-            href='#'
+            href='/dashboard/settings'
             class='group -mx-2 flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 hover:bg-secondary'
           >
             <Icons.Settings className='h-6 w-6 shrink-0 text-muted-foreground group-hover:text-primary' />
@@ -79,4 +79,3 @@ import type { NavigationItem, Team } from '@/types'
     </nav>
   </div>
 </div>
- ./Icons
