--- a/src/components/DashboardHomePage.astro
+++ b/src/components/DashboardHomePage.astro
@@ -3,12 +3,26 @@ import DashboardStaticSidebar from '@/components/DashboardStaticSidebar.astro'
 import { DashboardFlyoutMenu } from './DashboardFlyoutMenu'
 import { navigation, teams } from '@/config/dashboard'
 const path = Astro.url.pathname
+const { title } = Astro.props
 ---
 
-<div>
-  <DashboardStaticSidebar navigation={navigation} teams={teams} />
-  <DashboardFlyoutMenu client:load path={path} />
-  <main class='py-10'>
-    <div class='mx-auto max-w-7xl px-4 sm:px-6 lg:px-8'>Hi there</div>
-  </main>
-</div>
+<!doctype html>
+<html lang='en'>
+  <head>
+    <meta charset='UTF-8' />
+    <meta name='description' content='Astro description' />
+    <meta name='viewport' content='width=device-width' />
+    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <meta name='generator' content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body class='dark'>
+    <DashboardStaticSidebar navigation={navigation} teams={teams} />
+    <DashboardFlyoutMenu client:load path={path} />
+    <main class='py-10'>
+      <div class='mx-auto max-w-7xl px-4 sm:px-6 lg:px-8'>
+        <slot />
+      </div>
+    </main>
+  </body>
+</html>
