--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,7 +2,7 @@
 import { navigation } from '@/config/navigation'
 import { buttonVariants } from './Button.astro'
 import { cn } from '@/lib/utils'
-import LogoIcon from './icons/LogoIcon.astro'
+import { Icons } from './Icons'
 ---
 
 <header class='absolute inset-x-0 top-0 z-50'>
@@ -10,7 +10,7 @@ import LogoIcon from './icons/LogoIcon.astro'
     <div class='flex lg:flex-1'>
       <a href='#' class='-m-1.5 p-1.5'>
         <span class='sr-only'>Your Company</span>
-        <LogoIcon />
+        <Icons.Logo />
       </a>
     </div>
     <div class='flex lg:hidden'>
@@ -51,7 +51,7 @@ import LogoIcon from './icons/LogoIcon.astro'
       <div class='flex items-center justify-between'>
         <a href='#' class='-m-1.5 p-1.5'>
           <span class='sr-only'>Your Company</span>
-          <LogoIcon />
+          <Icons.Logo />
         </a>
         <button type='button' class='-m-2.5 rounded-md p-2.5 text-gray-700'>
           <span class='sr-only'>Close menu</span>
