--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -1,5 +1,5 @@
 ---
-import '@/styles/globals.css'
+import Layout from '@/layouts/Layout.astro'
 import RegisterForm from '@/components/RegisterForm.astro'
 
 const { cookies, redirect } = Astro
@@ -12,4 +12,6 @@ if (accessToken && refreshToken) {
 }
 ---
 
-<RegisterForm />
+<Layout title='Register'>
+  <RegisterForm />
+</Layout>
