--- a/src/components/DashboardStaticSidebar.astro
+++ b/src/components/DashboardStaticSidebar.astro
@@ -48,7 +48,7 @@ import type { NavigationItem, Team } from '@/types'
                     href={team.href}
                     class={cn(
                       path === team.href ? 'bg-secondary' : 'hover:bg-secondary',
-                      'group flex gap-x-3 rounded-md p-2 text-sm leading-6'
+                      'group flex gap-x-3 rounded-md p-2 text-sm leading-6 cursor-not-allowed'
                     )}>
                     <span
                       class={cn(
