Fix dark mode, hydate landing page menu

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -10,6 +10,7 @@ export const buttonVariants = cva(
       variant: {
         default: 'bg-primary hover:bg-primary/80 focus-visible:outline-primary',
         secondary: 'bg-secondary text-secondary-foreground hover:bg-secondary/80 focus-visible:outline-secondary',
+        ghost: 'hover:bg-accent hover:text-accent-foreground',
       },
     },
   }
