--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,60 +1,59 @@
 ---
-import { buttonVariants } from './Button.astro'
-import { cn } from '@/lib/utils'
+import Layout from '@/layouts/Layout.astro'
+import LandingNavbar from './LandingNavbar.astro'
+import Button from './Button.astro'
 ---
 
-<div>
+<Layout title='Astro Dashboard'>
+  <LandingNavbar />
   <main>
     <div class='relative isolate'>
       <svg
-        class='absolute inset-x-0 top-0 -z-10 h-[64rem] w-full stroke-gray-200 [mask-image:radial-gradient(32rem_32rem_at_center,white,transparent)]'
+        class='absolute inset-x-0 top-0 -z-10 h-[64rem] w-full stroke-border [mask-image:radial-gradient(32rem_32rem_at_center,white,transparent)]'
         aria-hidden='true'
       >
         <defs>
           <pattern
             id='1f932ae7-37de-4c0a-a8b0-a6e3b4d44b84'
-            width='200'
-            height='200'
+            width={200}
+            height={200}
             x='50%'
-            y='-1'
+            y={-1}
             patternUnits='userSpaceOnUse'
           >
             <path d='M.5 200V.5H200' fill='none'></path>
           </pattern>
         </defs>
-        <svg x='50%' y='-1' class='overflow-visible fill-gray-50'>
-          <path
-            d='M-200 0h201v201h-201Z M600 0h201v201h-201Z M-400 600h201v201h-201Z M200 800h201v201h-201Z'
-            stroke-width='0'></path>
-        </svg>
-        <rect width='100%' height='100%' stroke-width='0' fill='url(#1f932ae7-37de-4c0a-a8b0-a6e3b4d44b84)'></rect>
+        <rect width='100%' height='100%' stroke-width={0} fill='url(#1f932ae7-37de-4c0a-a8b0-a6e3b4d44b84)'></rect>
       </svg>
-      <!-- <div
+      <div
         class='absolute left-1/2 right-0 top-0 -z-10 -ml-24 transform-gpu overflow-hidden blur-3xl lg:ml-24 xl:ml-48'
         aria-hidden='true'
       >
         <div
-          class='aspect-[801/1036] w-[50.0625rem] bg-gradient-to-tr from-orange-200 to-orange-700 opacity-30'
-          style='clip-path: polygon(63.1% 29.5%, 100% 17.1%, 76.6% 3%, 48.4% 0%, 44.6% 4.7%, 54.5% 25.3%, 59.8% 49%, 55.2% 57.8%, 44.4% 57.2%, 27.8% 47.9%, 35.1% 81.5%, 0% 97.7%, 39.2% 100%, 35.2% 81.4%, 97.2% 52.8%, 63.1% 29.5%)'
-        ></div>
-      </div> -->
+          class='aspect-[801/1036] w-[50.0625rem] bg-gradient-to-tr from-border to-orange-600 opacity-30'
+          style={{
+            clipPath:
+              'polygon(63.1% 29.5%, 100% 17.1%, 76.6% 3%, 48.4% 0%, 44.6% 4.7%, 54.5% 25.3%, 59.8% 49%, 55.2% 57.8%, 44.4% 57.2%, 27.8% 47.9%, 35.1% 81.5%, 0% 97.7%, 39.2% 100%, 35.2% 81.4%, 97.2% 52.8%, 63.1% 29.5%)',
+          }}></div>
+      </div>
       <div class='overflow-hidden'>
         <div class='mx-auto max-w-7xl px-6 pb-32 pt-36 sm:pt-60 lg:px-8 lg:pt-32'>
           <div class='mx-auto max-w-2xl gap-x-14 lg:mx-0 lg:flex lg:max-w-none lg:items-center'>
             <div class='relative w-full max-w-xl lg:shrink-0 xl:max-w-2xl'>
-              <h1 class='text-4xl font-bold tracking-tight text-gray-900 sm:text-6xl'
-                >We’re changing the way people connect.</h1
-              >
-              <p class='mt-6 text-lg leading-8 text-gray-600 sm:max-w-md lg:max-w-none'
-                >Cupidatat minim id magna ipsum sint dolor qui. Sunt sit in quis cupidatat mollit aute velit. Et labore
+              <h1 class='text-4xl font-bold tracking-tight sm:text-6xl'> We’re changing the way people connect.</h1>
+              <p class='mt-6 text-lg leading-8 sm:max-w-md lg:max-w-none text-muted-foreground'>
+                Cupidatat minim id magna ipsum sint dolor qui. Sunt sit in quis cupidatat mollit aute velit. Et labore
                 commodo nulla aliqua proident mollit ullamco exercitation tempor. Sint aliqua anim nulla sunt mollit id
-                pariatur in voluptate cillum.</p
-              >
+                pariatur in voluptate cillum.
+              </p>
               <div class='mt-10 flex items-center gap-x-6'>
-                <a href='#' class={cn(buttonVariants({ variant: 'default' }))}>Get started</a>
-                <a href='#' class='text-sm font-semibold leading-6 text-gray-900'
-                  >Live demo <span aria-hidden='true'>→</span></a
-                >
+                <Button>
+                  <a href='#'>Get started</a>
+                </Button>
+                <a href='#' class='text-sm font-semibold leading-6'>
+                  Live demo <span aria-hidden='true'>→</span>
+                </a>
               </div>
             </div>
             <div class='mt-14 flex justify-end gap-8 sm:-mt-44 sm:justify-start sm:pl-20 lg:mt-0 lg:pl-0'>
@@ -112,4 +111,4 @@ import { cn } from '@/lib/utils'
       </div>
     </div>
   </main>
-</div>
+</Layout>
