--- a/src/components/LoginForm.astro
+++ b/src/components/LoginForm.astro
@@ -22,7 +22,7 @@ import { cn } from '@/lib/utils'
               type='email'
               autocomplete='email'
               placeholder='johndoe@gmail.com'
-              class='block w-full rounded-md border-0 py-1.5 shadow-sm ring-1 ring-inset ring-border placeholder:text-muted-foreground focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6'
+              class='block bg-background w-full rounded-md border-0 py-1.5 shadow-sm ring-1 ring-inset ring-border placeholder:text-muted-foreground focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6'
             />
           </div>
         </div>
@@ -34,8 +34,9 @@ import { cn } from '@/lib/utils'
               id='password'
               name='password'
               type='password'
+              placeholder='••••••••'
               autocomplete='current-password'
-              class='block w-full rounded-md border-0 py-1.5 shadow-sm ring-1 ring-inset ring-border placeholder:text-muted-foreground focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6'
+              class='block bg-background w-full rounded-md border-0 py-1.5 shadow-sm ring-1 ring-inset ring-border placeholder:text-muted-foreground focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6'
             />
           </div>
         </div>
@@ -72,15 +73,15 @@ import { cn } from '@/lib/utils'
         </div>
 
         <div class='mt-6 grid grid-cols-2 gap-4'>
-          <a
-            href='#'
-            class={cn(
-              buttonVariants({ variant: 'secondary' }),
-              'flex items-center w-full justify-center gap-3 bg-foreground/90 text-background focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground/90 hover:bg-foreground/80'
-            )}
+          <button
+            value='github'
+            name='provider'
+            type='submit'
+            formaction='/api/auth/login'
+            class={cn(buttonVariants({ variant: 'secondary' }), 'w-full flex justify-center')}
           >
-            <Icons.Google className='fill-background h-5 w-5' />
-          </a>
+            <Icons.Google className='fill-foreground h-5 w-5' />
+          </button>
 
           <form action='/api/auth/login' method='get'>
             <button
@@ -88,21 +89,18 @@ import { cn } from '@/lib/utils'
               name='provider'
               type='submit'
               formaction='/api/auth/login'
-              class={cn(
-                buttonVariants({ variant: 'secondary' }),
-                'flex itesm-center w-full justify-center gap-3 bg-foreground/90 text-background focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-foreground/90 hover:bg-foreground/80'
-              )}
+              class={cn(buttonVariants({ variant: 'secondary' }), 'w-full flex justify-center')}
             >
-              <Icons.GitHub className='h-5 w-5' />
+              <Icons.GitHub className='h-5 w-5 text-foreground' />
             </button>
           </form>
         </div>
       </div>
-    </div>
 
-    <p class='mt-10 text-center text-sm text-muted-foreground'>
-      Not a member yet?
-      <a href='/register' class='font-semibold leading-6 text-primary hover:text-primary/90'>Sign up here!</a>
-    </p>
+      <p class='mt-10 text-center text-sm text-muted-foreground'>
+        Not a member yet?
+        <a href='/register' class='font-semibold leading-6 text-primary hover:text-primary/90'>Sign up here!</a>
+      </p>
+    </div>
   </div>
 </div>
