--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,13 +1,13 @@
 ---
 import Layout from '@/layouts/Layout.astro'
 // import Navbar from '@/components/Navbar.astro'
-// import Hero from '@/components/Hero.astro'
-import { Hero } from '@/components/Hero'
+import Hero from '@/components/Hero.astro'
+// import { Hero } from '@/components/Hero'
 ---
 
 <Layout title='Welcome to Astro.'>
   <!-- <main> -->
   <!-- <Navbar /> -->
-  <Hero client:load />
+  <Hero />
   <!-- </main> -->
 </Layout>
