--- a/src/components/RegisterForm.astro
+++ b/src/components/RegisterForm.astro
@@ -12,7 +12,7 @@ import { cn } from '@/lib/utils'
 
   <div class='mt-10 sm:mx-auto sm:w-full sm:max-w-[480px]'>
     <div class='px-6 py-12 shadow sm:rounded-lg sm:px-12'>
-      <form class='space-y-6' action='/api/auth/login' method='POST'>
+      <form class='space-y-6' action='/api/auth/register' method='POST'>
         <div>
           <label for='email' class='block text-sm font-medium leading-6'>Email address</label>
           <div class='mt-2'>
