--- a/src/components/DashboardStaticSidebar.astro
+++ b/src/components/DashboardStaticSidebar.astro
@@ -69,9 +69,17 @@ import type { NavigationItem, Team } from '@/types'
         <li class='mt-auto'>
           <a
             href='/dashboard/settings'
-            class='group -mx-2 flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6 hover:bg-secondary'
+            class={cn(
+              path === '/dashboard/settings' ? 'bg-secondary' : 'hover:bg-secondary',
+              'group -mx-2 flex gap-x-3 rounded-md p-2 text-sm font-semibold leading-6'
+            )}
           >
-            <Icons.Settings className='h-6 w-6 shrink-0 text-muted-foreground group-hover:text-primary' />
+            <Icons.Settings
+              className={cn(
+                path === '/dashboard/settings' ? 'text-primary' : 'text-muted-foreground',
+                'h-6 w-6 shrink-0 group-hover:text-primary'
+              )}
+            />
              Settings
           </a>
         </li>
