--- a/src/pages/dashboard/settings.astro
+++ b/src/pages/dashboard/settings.astro
@@ -6,7 +6,6 @@ import Button from '@/components/Button.astro'
 <DashboardLayout title='Dashboard | Teams'>
   <div class='lg:pl-72'>
     <main>
-      <!-- Settings forms -->
       <div class='divide-y divide-border'>
         <div class='grid max-w-7xl grid-cols-1 gap-x-8 gap-y-10 px-4 py-16 sm:px-6 md:grid-cols-3 lg:px-8'>
           <div>
@@ -79,8 +78,7 @@ import Button from '@/components/Button.astro'
                   <div
                     class='flex rounded-md bg-background ring-1 ring-inset ring-border focus-within:ring-2 focus-within:ring-inset focus-within:ring-primary'
                   >
-                    <span class='flex select-none items-center pl-3 text-muted-foreground sm:text-sm'>example.com/</span
-                    >
+                    <span class='flex select-none items-center pl-3 text-muted-foreground sm:text-sm'>@</span>
                     <input
                       type='text'
                       name='username'
@@ -117,98 +115,56 @@ import Button from '@/components/Button.astro'
 
         <div class='grid max-w-7xl grid-cols-1 gap-x-8 gap-y-10 px-4 py-16 sm:px-6 md:grid-cols-3 lg:px-8'>
           <div>
-            <h2 class='text-base font-semibold leading-7 text-white'>Change password</h2>
-            <p class='mt-1 text-sm leading-6 text-gray-400'>Update your password associated with your account.</p>
-          </div>
-
-          <form class='md:col-span-2'>
-            <div class='grid grid-cols-1 gap-x-6 gap-y-8 sm:max-w-xl sm:grid-cols-6'>
-              <div class='col-span-full'>
-                <label for='current-password' class='block text-sm font-medium leading-6 text-white'
-                  >Current password</label
-                >
-                <div class='mt-2'>
-                  <input
-                    id='current-password'
-                    name='current_password'
-                    type='password'
-                    autocomplete='current-password'
-                    class='block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6'
-                  />
-                </div>
-              </div>
-
-              <div class='col-span-full'>
-                <label for='new-password' class='block text-sm font-medium leading-6 text-white'>New password</label>
-                <div class='mt-2'>
-                  <input
-                    id='new-password'
-                    name='new_password'
-                    type='password'
-                    autocomplete='new-password'
-                    class='block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6'
-                  />
-                </div>
-              </div>
-
-              <div class='col-span-full'>
-                <label for='confirm-password' class='block text-sm font-medium leading-6 text-white'
-                  >Confirm password</label
-                >
-                <div class='mt-2'>
-                  <input
-                    id='confirm-password'
-                    name='confirm_password'
-                    type='password'
-                    autocomplete='new-password'
-                    class='block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6'
-                  />
-                </div>
-              </div>
-            </div>
-
-            <div class='mt-8 flex'>
-              <button
-                type='submit'
-                class='rounded-md bg-indigo-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500'
-                >Save</button
-              >
-            </div>
-          </form>
-        </div>
-
-        <div class='grid max-w-7xl grid-cols-1 gap-x-8 gap-y-10 px-4 py-16 sm:px-6 md:grid-cols-3 lg:px-8'>
-          <div>
-            <h2 class='text-base font-semibold leading-7 text-white'>Log out other sessions</h2>
-            <p class='mt-1 text-sm leading-6 text-gray-400'
-              >Please enter your password to confirm you would like to log out of your other sessions across all of your
-              devices.</p
+            <h2 class='text-base font-semibold leading-7'>Change password</h2>
+            <p class='mt-1 text-sm leading-6 text-muted-foreground'
+              >Update your password associated with your account.</p
             >
           </div>
 
           <form class='md:col-span-2'>
             <div class='grid grid-cols-1 gap-x-6 gap-y-8 sm:max-w-xl sm:grid-cols-6'>
               <div class='col-span-full'>
-                <label for='logout-password' class='block text-sm font-medium leading-6 text-white'>Your password</label
-                >
+                <label for='current-password' class='block text-sm font-medium leading-6'>Current password</label>
                 <div class='mt-2'>
                   <input
-                    id='logout-password'
-                    name='password'
+                    id='current-password'
+                    name='current_password'
                     type='password'
                     autocomplete='current-password'
-                    class='block w-full rounded-md border-0 bg-white/5 py-1.5 text-white shadow-sm ring-1 ring-inset ring-white/10 focus:ring-2 focus:ring-inset focus:ring-indigo-500 sm:text-sm sm:leading-6'
+                    class='block w-full rounded-md border-0 bg-background py-1.5 shadow-sm ring-1 ring-inset ring-border focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6'
+                  />
+                </div>
+              </div>
+
+              <div class='col-span-full'>
+                <label for='new-password' class='block text-sm font-medium leading-6'>New password</label>
+                <div class='mt-2'>
+                  <input
+                    id='new-password'
+                    name='new_password'
+                    type='password'
+                    autocomplete='new-password'
+                    class='block w-full rounded-md border-0 bg-background py-1.5 shadow-sm ring-1 ring-inset ring-border focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6'
+                  />
+                </div>
+              </div>
+
+              <div class='col-span-full'>
+                <label for='confirm-password' class='block text-sm font-medium leading-6'>Confirm password</label>
+                <div class='mt-2'>
+                  <input
+                    id='confirm-password'
+                    name='confirm_password'
+                    type='password'
+                    autocomplete='new-password'
+                    class='block w-full rounded-md border-0 bg-background py-1.5 shadow-sm ring-1 ring-inset ring-border focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6'
                   />
                 </div>
               </div>
             </div>
 
             <div class='mt-8 flex'>
-              <button
-                type='submit'
-                class='rounded-md bg-indigo-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500'
-                >Log out other sessions</button
-              >
+              <Button type='submit'>Save</Button>
             </div>
           </form>
         </div>
@@ -225,7 +181,7 @@ import Button from '@/components/Button.astro'
           <form class='flex items-start md:col-span-2'>
             <button
               type='submit'
-              class='rounded-md bg-red-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-red-400'
+              class='rounded-md bg-destructive px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-destructive/90'
               >Yes, delete my account</button
             >
           </form>
