--- a/src/components/DashboardStats.astro
+++ b/src/components/DashboardStats.astro
@@ -1,56 +1,7 @@
 ---
-const totalSales = [
-  {
-    name: 'New York',
-    sales: 9800,
-  },
-  {
-    name: 'London',
-    sales: 4567,
-  },
-  {
-    name: 'Hong Kong',
-    sales: 3908,
-  },
-  {
-    name: 'San Francisco',
-    sales: 2400,
-  },
-  {
-    name: 'Singapore',
-    sales: 1908,
-  },
-  {
-    name: 'Zurich',
-    sales: 1398,
-  },
-]
-
-const totalCustomers = [
-  {
-    name: 'Canada',
-    number: 56,
-  },
-  {
-    name: 'United Kingdom',
-    number: 24,
-  },
-  {
-    name: 'Australia',
-    number: 19,
-  },
-  {
-    name: 'United States',
-    number: 187,
-  },
-]
-
-const valueFormatter = (number: number) => `$ ${new Intl.NumberFormat('us').format(number).toString()}`
-
 import { PieChart } from './PieChart'
 ---
 
 <div class='grid sm:grid-cols-2 xl:grid-cols-3 gap-5'>
-  <PieChart title='Sales' data={totalSales} category='sales' valueFormatter={valueFormatter} client:load />
-  <PieChart title='Total customers' data={totalCustomers} category='number' client:load />
+  <PieChart client:load />
 </div>
