Add new dummy charts to dashboard home screen

--- a/src/layouts/DashboardLayout.astro
+++ b/src/layouts/DashboardLayout.astro
@@ -18,10 +18,10 @@ const { title } = Astro.props
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class='dark'>
+  <body>
     <DashboardStaticSidebar navigation={navigation} teams={teams} />
     <DashboardFlyoutMenu client:load path={path} />
-    <div class='mx-auto max-w-7xl px-4 sm:px-6 lg:px-8'>
+    <div class='mx-auto max-w-[85rem] px-4 sm:px-6 lg:px-8'>
       <slot />
     </div>
   </body>
