--- a/src/components/DashboardStats.astro
+++ b/src/components/DashboardStats.astro
@@ -1,7 +1,15 @@
 ---
 import { PieChart } from './PieChart'
+import { BarLists } from './BarLists'
+import { AreaCharts } from './AreaCharts'
 ---
 
-<div class='grid sm:grid-cols-2 xl:grid-cols-3 gap-5'>
-  <PieChart client:load />
-</div>
+<section class='mb-10'>
+  <div class='md:flex-row flex overflow-x-scroll py-4 px-1 gap-5 flex-col'>
+    <PieChart client:load />
+  </div>
+  <div class='grid md:grid-cols-2 gap-5 border-t pt-4'>
+    <BarLists />
+    <AreaCharts client:load />
+  </div>
+</section>
