--- a/src/components/DashboardStats.astro
+++ b/src/components/DashboardStats.astro
@@ -5,10 +5,10 @@ import { AreaCharts } from './AreaCharts'
 ---
 
 <section class='mb-10'>
-  <div class='md:flex-row flex overflow-x-scroll py-4 px-1 gap-5 flex-col'>
+  <div class='md:flex-row flex overflow-x-scroll px-1 py-4 gap-5 flex-col'>
     <PieChart client:load />
   </div>
-  <div class='grid md:grid-cols-2 gap-5 border-t pt-4'>
+  <div class='grid md:grid-cols-2 gap-5 pt-[4px] px-1'>
     <BarLists />
     <AreaCharts client:load />
   </div>
