--- a/src/pages/dashboard/documents.astro
+++ b/src/pages/dashboard/documents.astro
@@ -11,5 +11,89 @@ if (!accessToken && !refreshToken) {
 ---
 
 <DashboardLayout title='Dashboard | Teams'>
-  <h1 class='pt-5 lg:pl-72'>Hello from the Dashboard documents page!</h1>
+  <div class='lg:pl-72 pt-5'>
+    <div class='px-4 sm:px-0'>
+      <h3 class='text-base font-semibold leading-7'>Applicant Information</h3>
+      <p class='mt-1 max-w-2xl text-sm leading-6 text-muted-foreground'>Personal details and application.</p>
+    </div>
+    <div class='mt-6 border-t'>
+      <dl class='divide-y divide-border'>
+        <div class='px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0'>
+          <dt class='text-sm font-medium leading-6'>Full name</dt>
+          <dd class='mt-1 text-sm leading-6 text-muted-foreground sm:col-span-2 sm:mt-0'>Margot Foster</dd>
+        </div>
+        <div class='px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0'>
+          <dt class='text-sm font-medium leading-6'>Application for</dt>
+          <dd class='mt-1 text-sm leading-6 text-muted-foreground sm:col-span-2 sm:mt-0'>Backend Developer</dd>
+        </div>
+        <div class='px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0'>
+          <dt class='text-sm font-medium leading-6'>Email address</dt>
+          <dd class='mt-1 text-sm leading-6 text-muted-foreground sm:col-span-2 sm:mt-0'>margotfoster@example.com</dd>
+        </div>
+        <div class='px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0'>
+          <dt class='text-sm font-medium leading-6'>Salary expectation</dt>
+          <dd class='mt-1 text-sm leading-6 text-muted-foreground sm:col-span-2 sm:mt-0'>$120,000</dd>
+        </div>
+        <div class='px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0'>
+          <dt class='text-sm font-medium leading-6'>About</dt>
+          <dd class='mt-1 text-sm leading-6 text-muted-foreground sm:col-span-2 sm:mt-0'
+            >Fugiat ipsum ipsum deserunt culpa aute sint do nostrud anim incididunt cillum culpa consequat. Excepteur
+            qui ipsum aliquip consequat sint. Sit id mollit nulla mollit nostrud in ea officia proident. Irure nostrud
+            pariatur mollit ad adipisicing reprehenderit deserunt qui eu.</dd
+          >
+        </div>
+        <div class='px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0'>
+          <dt class='text-sm font-medium leading-6'>Attachments</dt>
+          <dd class='mt-2 text-sm sm:col-span-2 sm:mt-0'>
+            <ul role='list' class='divide-y divide-border rounded-md border'>
+              <li class='flex items-center justify-between py-4 pl-4 pr-5 text-sm leading-6'>
+                <div class='flex w-0 flex-1 items-center'>
+                  <svg
+                    class='h-5 w-5 flex-shrink-0 text-muted-foreground'
+                    viewBox='0 0 20 20'
+                    fill='currentColor'
+                    aria-hidden='true'
+                  >
+                    <path
+                      fill-rule='evenodd'
+                      d='M15.621 4.379a3 3 0 00-4.242 0l-7 7a3 3 0 004.241 4.243h.001l.497-.5a.75.75 0 011.064 1.057l-.498.501-.002.002a4.5 4.5 0 01-6.364-6.364l7-7a4.5 4.5 0 016.368 6.36l-3.455 3.553A2.625 2.625 0 119.52 9.52l3.45-3.451a.75.75 0 111.061 1.06l-3.45 3.451a1.125 1.125 0 001.587 1.595l3.454-3.553a3 3 0 000-4.242z'
+                      clip-rule='evenodd'></path>
+                  </svg>
+                  <div class='ml-4 flex min-w-0 flex-1 gap-2'>
+                    <span class='truncate font-medium'>resume_back_end_developer.pdf</span>
+                    <span class='flex-shrink-0 text-muted-foreground'>2.4mb</span>
+                  </div>
+                </div>
+                <div class='ml-4 flex-shrink-0'>
+                  <a href='#' class='font-medium text-primary hover:text-primary/90'>Download</a>
+                </div>
+              </li>
+              <li class='flex items-center justify-between py-4 pl-4 pr-5 text-sm leading-6'>
+                <div class='flex w-0 flex-1 items-center'>
+                  <svg
+                    class='h-5 w-5 flex-shrink-0 text-muted-foreground'
+                    viewBox='0 0 20 20'
+                    fill='currentColor'
+                    aria-hidden='true'
+                  >
+                    <path
+                      fill-rule='evenodd'
+                      d='M15.621 4.379a3 3 0 00-4.242 0l-7 7a3 3 0 004.241 4.243h.001l.497-.5a.75.75 0 011.064 1.057l-.498.501-.002.002a4.5 4.5 0 01-6.364-6.364l7-7a4.5 4.5 0 016.368 6.36l-3.455 3.553A2.625 2.625 0 119.52 9.52l3.45-3.451a.75.75 0 111.061 1.06l-3.45 3.451a1.125 1.125 0 001.587 1.595l3.454-3.553a3 3 0 000-4.242z'
+                      clip-rule='evenodd'></path>
+                  </svg>
+                  <div class='ml-4 flex min-w-0 flex-1 gap-2'>
+                    <span class='truncate font-medium'>coverletter_back_end_developer.pdf</span>
+                    <span class='flex-shrink-0 text-muted-foreground'>4.5mb</span>
+                  </div>
+                </div>
+                <div class='ml-4 flex-shrink-0'>
+                  <a href='#' class='font-medium text-primary hover:text-primary/90'>Download</a>
+                </div>
+              </li>
+            </ul>
+          </dd>
+        </div>
+      </dl>
+    </div>
+  </div>
 </DashboardLayout>
